<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="20dp"
    android:background="#000000" >

    <Button
        android:id="@+id/button1"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.92"
        android:text="@string/byt"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#99bdff" />"

    <Button
        android:id="@+id/button2"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.22"
        android:text="@string/voice"
         android:textStyle="bold"
          android:textSize="20sp"
          android:textColor="#99bdff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2.01"
        android:text="@string/news"
         android:textStyle="bold"
          android:textSize="20sp"
          android:textColor="#99bdff" />

    <Button
        android:id="@+id/button4"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.23"
        android:text="@string/app"
         android:textStyle="bold"
          android:textSize="20sp" 
          android:textColor="#99bdff"/>

</LinearLayout>
