<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    >
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="20sp"
        android:textColor="#99bdff"
        android:layout_gravity="center"
        android:gravity="center"
        />


    <VideoView
        android:layout_width="match_parent"
        android:layout_height="407dp"
        android:id="@+id/videoView" />

    <Button

        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replay"
        android:textSize="20sp"
        android:textColor="#7fffd4"
        android:layout_gravity="center_horizontal" />

    <Button

        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="#7fffd4"
        android:layout_gravity="center_horizontal" />
</LinearLayout>