<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingEnd="60dp"
    android:paddingLeft="40dp"
    android:paddingRight="60dp"
    android:paddingStart="40dp"
   >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appdetails" 
        
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:textStyle="italic"
    />
    
     <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingStart="20dp"
    android:paddingLeft="20dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/back" />
</LinearLayout>
</LinearLayout>
